added in dataset, some eda

--- a/code/RoadMap.ipynb
+++ b/code/RoadMap.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# Data Set stuff to consider\n",
     "\n",
-    "1) Data has to be collected manually expecting about approx 800 rows of data to be keyed in. (currently done with 300)\n",
+    "1) Data has to be collected manually expecting about approx 800 rows of data to be keyed in.\n",
     "2) Look for google trends on Kpop in general (done)\n",
     "3) Additional information to consider to add in (pending sufficent time)\n",
     "    1) Number of Scandels\n",
