--- a/code/1.Problem Statement & Data Cleaning.ipynb
+++ b/code/1.Problem Statement & Data Cleaning.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Working in one of the major music entertainment company in korea, our company has multiple music group of various performance under our care. The competition in this industry is very tough. Every music group have to ensure they are constantly able to bring about new music to contiune to capture their audience or to capture new ones to remain in the industry. Once they are unable to do so other group will take this oppertunity to overtake them. The role of the music entertainment company is not only to help promote the exsiting music group but to also recuit trainees and prepare them for their debut should there be signs of the music group on the verge of disbandment. However this is a long process, as new trainees often have to go through many years of training before they are even considered when a new group is slated to be form. Thus a way to identify the remainding time before a group would be disbanded would help save the company time and resources spent on the trainees. Thus we are tasked to come up with a model to predict the expected lifespan for a music group before it would be disbanded based on their current performance history thus far. "
+    "Working in one of the major music entertainment company in korea, our company has multiple music group of various performance under our care. The competition in this industry is very tough. Every music group have to ensure they are constantly able to bring about new music to contiune to capture their audience or to capture new ones to remain in the industry. Once they are unable to do so other group will take this oppertunity to overtake them. The role of the music entertainment company is not only to help promote the exsiting music group but to also recuit trainees and prepare them for their debut should there be signs of the music group on the verge of disbandment. However this is a long process, as new trainees often have to go through many years of training before they are even considered when a new group is slated to be form. Thus a way to identify the remainding time before a group would be disbanded would help save the company time and resources spent on the trainees. Thus we are tasked to come up with a model to predict the expected lifespan for a music group before it would be disbanded, identify current and future music group trend."
    ]
   },
   {
@@ -43,10 +43,8 @@
     "The Dataset contains details of the various music groups in Korea. The data are obtained from a combination of various website such as [kpop fandom](https://kpop.fandom.com/wiki/Main_Page), [dbkpop](https://dbkpop.com/) and [GoogleTrend](googletrendhttps://trends.google.com/trends/explore?date=all&q=%2Fm%2F02yh8l)\n",
     "\n",
     "The datasets obtained are as followed:-\n",
-    "\n",
-    "* musicgroup_df (data of all music groups)\n",
-    "* disband_df (data of music groups that have been officially disbanded)\n",
-    "* active_df (data of music groups that have not been officially disbanded)"
+    "* KpopTrend2014To2021.csv (GoogleTrend \"KPOP\" keyword trend value 2004 to 2021)\n",
+    "* MusicGroups.csv (data of all music groups from 1990 to 2021)"
    ]
   },
   {
@@ -97,7 +95,7 @@
    "source": [
     "# Import data from csv\n",
     "musicgroup_df = pd.read_csv('../data/MusicGroups.csv')\n",
-    "kpoptrend_df = pd.read_csv(\"../data/KpopTrend2014To2021.csv\")"
+    "kpoptrend_df = pd.read_csv(\"../data/KpopTrend2004To2021.csv\")"
    ]
   },
   {
@@ -348,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +557,7 @@
        "       2002, 1990, 2008, 1996, 1992, 2004, 1993, 1995], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +579,7 @@
        "       1996, 2010, 1997], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +601,7 @@
        "       2010], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,12 +614,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.3. Check company values (musicgroup_df)"
+    "#### 2.3.4. Check company values (musicgroup_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,12 +631,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.4. Change columns names (kpoptrend_df)"
+    "#### 2.3.5. Change columns names (kpoptrend_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,35 +649,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4. Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Summary**\n",
-    "\n",
-    "**For musicgroup_df:**\n",
-    "* The column names have been changed to lowercase and spaces replaced with underscore.\n",
-    "* missing values filled with 0 if they are still active.\n",
-    "* dates related cells are checked for their range \n",
-    "* company names changed to lowercase and spaces replaced with underscores.\n",
-    "\n",
-    "**For kpoptrend_df:**\n",
-    "* There are no missing values. column names changed to make it more readable.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Exporting Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,27 +662,6 @@
     "musicgroup_df.to_csv(\"../data/musicgroup_cleaned.csv\", index = False)\n",
     "kpoptrend_df.to_csv(\"../data/kpoptrend_cleaned.csv\", index = True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
