--- a/code/3.Modeling.ipynb
+++ b/code/3.Modeling.ipynb
@@ -24,19 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Dictionary\n",
-    "\n"
+    "## 4. Modeling"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Modeling"
-   ]
-  },
-  {
-   "cell_type": "raw",
    "metadata": {},
    "source": [
     "We will be performing a train/test split on our data set to have a training set and a holdout set. In total, we will be using a null model as the baseline model and 3 models to fit the dataset and evaluate the models in predicting the y-values using the validation set.\n",
@@ -45,22 +37,7 @@
     "* Null Model\n",
     "* Lasso Regression\n",
     "* Ridge Regression\n",
-    "* Elestic-Net Regression\n",
-    "* Neural Networks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As this project aims to develop a model that...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Modeling: Logistic Regression"
+    "* Elestic-Net Regression"
    ]
   },
   {
@@ -72,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,8 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4 Multicollinearity\n",
-    "As mentioned in our EDA section we suspect that there might be multicollinearity effect present. Therefore we will use a polynomial feature of 2 to model our data as well."
+    "### 4.4 Split the data into train/val data with and without Polynomial Feature"
    ]
   },
   {
@@ -617,16 +593,8 @@
    "source": [
     "# Instantiate our PolynomialFeatures object to create all two-way terms.\n",
     "poly = PolynomialFeatures(degree=2, interaction_only=False, include_bias=False)\n",
-    "\n",
     "# Fit and transform our X data.\n",
     "X_poly = poly.fit_transform(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4 Split the data into train/val data"
    ]
   },
   {
@@ -637,7 +605,6 @@
    "source": [
     "# Perform a train, val split on the data on the resampled data (normal)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=.2, random_state=42)\n",
-    "\n",
     "# Perform a train, val split on the data on the resampled data (polynomialfeature)\n",
     "X_poly_train, X_poly_val, y_poly_train, y_poly_val = train_test_split(X_poly, y, test_size=.2, random_state=42)"
    ]
@@ -739,7 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that although the score is better on the training data, when it come to the test data it performed poorly. Its a classic case of overfitting. Therefore we will be using the normal features to create our model."
+    "**Analysis: We see that although the score is better on the training data, when it come to the test data it performed poorly. Its a classic case of overfitting. Therefore we will be using the normal features to create our model.**"
    ]
   },
   {
@@ -866,7 +833,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -896,7 +865,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.6 Ridge Regression\n",
+    "**Analysis: Lasso performed better than the OLS regression. It also help identify the features that are able to impact the lifepan of the music group the most.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.7 Ridge Regression\n",
     "\n"
    ]
   },
@@ -1047,7 +1023,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.6 ElasticNet Regression (With GridSearch)"
+    "### 4.8 ElasticNet Regression (With GridSearch)"
    ]
   },
   {
@@ -1329,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
