--- a/code/4.Evaluation & Conclusion.ipynb
+++ b/code/4.Evaluation & Conclusion.ipynb
@@ -28,9 +28,37 @@
     "- Background\n",
     "- Data Cleaning\n",
     "- Exploratory Data Analysis\n",
-    "- [Modeling]\n",
-    "- Evaluation(#4.-Modeling) **(In this notebook)**\n",
-    "- Conclusion and Recommendation(#4.-Modeling) **(In this notebook)**"
+    "- Modeling\n",
+    "- [Evaluation](#5.-Evaluation) **(In this notebook)**\n",
+    "- [Conclusion and Recommendation](#6.-Conclusion-and-Recommendation) **(In this notebook)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary Table: Model Evaluation**\n",
+    "\n",
+    "| Model|Train Score (Accuracy)       |   Val Score (Accuracy)   | Train RMSE |  Val RMSE |\n",
+    "|:-------------------:|:-------------------:|:-------:|:----------:|:-----------------:|\n",
+    "| OLS |  0.792 |    0.348  |     1.168    |      2.046     |\n",
+    "|Lasso regression| 0.736 |  0.703  | 1.314 |   1.380  |\n",
+    "|Ridge regression| 0.726 |  0.702  | 1.342 |   1.385  |\n",
+    "|Enet regression(best)| 0.727 |  0.701  | 1.338 |   1.385  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Analysis: Lasso performed the best amoung the 3 with the highest r sqaured score using the validation set from the train test split and the lowest RMSE score as well. However in terms of scale the improvement is not very significant. Collecting more data/features would help in impoving the model**"
    ]
   },
   {
@@ -41,56 +69,6 @@
    "source": [
     "pred_df = pd.read_csv(\"../data/pred.csv\")\n",
     "musicgroup_df = pd.read_csv(\"../data/combinedpred.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 705 entries, 0 to 704\n",
-      "Data columns (total 27 columns):\n",
-      " #   Column                       Non-Null Count  Dtype  \n",
-      "---  ------                       --------------  -----  \n",
-      " 0   group_name                   705 non-null    object \n",
-      " 1   company                      705 non-null    object \n",
-      " 2   group_type                   705 non-null    int64  \n",
-      " 3   debut_year                   705 non-null    int64  \n",
-      " 4   disband_year                 705 non-null    float64\n",
-      " 5   social_accounts              705 non-null    int64  \n",
-      " 6   inactive_members             705 non-null    int64  \n",
-      " 7   current_members              705 non-null    int64  \n",
-      " 8   original_members_remainding  705 non-null    int64  \n",
-      " 9   initial_members              705 non-null    int64  \n",
-      " 10  member_changes               705 non-null    int64  \n",
-      " 11  subunits                     705 non-null    int64  \n",
-      " 12  albums                       705 non-null    int64  \n",
-      " 13  mini_albums                  705 non-null    int64  \n",
-      " 14  other_albums                 705 non-null    int64  \n",
-      " 15  singles                      705 non-null    int64  \n",
-      " 16  digital_singles              705 non-null    int64  \n",
-      " 17  other_singles                705 non-null    int64  \n",
-      " 18  foreign_albums               705 non-null    int64  \n",
-      " 19  foreign_mini_albums          705 non-null    int64  \n",
-      " 20  foreign_other_album          705 non-null    int64  \n",
-      " 21  foreign_singles              705 non-null    int64  \n",
-      " 22  foreign_digital_singles      705 non-null    int64  \n",
-      " 23  others                       705 non-null    int64  \n",
-      " 24  last_production_year         705 non-null    int64  \n",
-      " 25  total_releases               705 non-null    int64  \n",
-      " 26  lifespan                     705 non-null    float64\n",
-      "dtypes: float64(2), int64(23), object(2)\n",
-      "memory usage: 148.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "musicgroup_df.info()"
    ]
   },
   {
@@ -106,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -402,32 +382,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Analysis: Using the lasso model, we put the features of the still active groups and try to predict what their lifespans are. Clearly they are able to identify some of the more popular bands and is able to assign them with a longer lifepsan as compare to others.**\n",
+    "\n",
+    "**An interesting point to point out is that when sorted by the longest lifespan, the top few groups are from the earlier generations of music groups which helpped kicked off the first kpop wave internationally**\n",
+    "\n",
+    "**And when sorted by the latest disband year, the top few groups are from the current generation which is raving in the current popularity charts.**"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 6. Conclusion and Recommendation"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "**We have shown that we are able to predict the lifespan of a music group to an extend. However the RMSE is considered high still. More data collection will be required to lower the score.**\n",
+    "\n",
+    "**We also highlighted that show that active music groups are starting to plateau. Thus it might be an indicator that its not a good time to introduce more group to the industry.**\n",
+    "\n",
+    "**We have also identified the features that helps extend the lifespan of music groups.**"
+   ]
   }
  ],
  "metadata": {
